force-app/main/default/objects/ssot__IdentityMatch__dlm/fields/ssot__IdentityMatchType__c.field-meta.xml
<CustomField>
    <fullName>ssot__IdentityMatchType__c</fullName>
    <label>Identity Match Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IdentityMatchType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>