force-app/main/default/objects/ssot__IdentityMatch__dlm/fields/ssot__IdentityMatchWeight__c.field-meta.xml
<CustomField>
    <fullName>ssot__IdentityMatchWeight__c</fullName>
    <label>Identity Match Weight</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IdentityMatchWeight</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>