force-app/main/default/objects/ssot__IdentityMatch__dlm/fields/ssot__IsAMatch__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Match</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAMatch</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>