force-app/main/default/objects/ssot__IdentityMatch__dlm/fields/ssot__MatchingRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MatchingRecordId__c</fullName>
    <label>Matching Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MatchingRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>