force-app/main/default/objects/ssot__IdentityMatch__dlm/fields/ssot__Object__c.field-meta.xml
<CustomField>
    <fullName>ssot__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Object</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>