force-app/main/default/objects/ssot__IdentityMatch__dlm/fields/ssot__rel_1721372228955_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1721372228955_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IdentityMatch_RecordId_map_Individua_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>IdentityMatch_RecordId_map_Individua_rel</relationshipLabel>
    <relationshipName>rel_1721372228955_end</relationshipName>
    <type>Lookup</type>
</CustomField>